--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
       name="description"
       content="Experimental menu UI with animations and transitions. Built for prototyping a concept."
     />
+    <link
+      rel="preload"
+      href="/assets/fonts/archivo-var.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
   </head>
   <body>
     <div id="root"></div>
